# reddi-agent-protocol

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DX-REPORT.md  README.md  SECURITY.md  STATUS.md  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json
.github/workflows/: anchor-test.yml  bdd-bucket-sweep-confidence.yml  bdd-index-guard.yml  integration-lane-nightly.yml  quasar-program-tests.yml  quasar-readiness-guard.yml  source-conformance-matrix.yml  surfpool-acceptance-manual.yml
app/: globals.css  layout.tsx  page.tsx
app/agents/: page.tsx
app/attestation/: page.tsx
artifacts/: final-recording-packet-20260507.md
components/: AgentCard.tsx  CodeBlock.tsx  DevnetModeBanner.tsx  Footer.tsx  GuidedSetupModal.tsx  LinkButton.tsx  NavBar.tsx  ReputationStars.tsx  SolAmount.tsx  SpecialistCard.tsx  StepIndicator.tsx  WalletProvider.tsx
docs/: ACCOUNT-ABSTRACTION-AGENT-WALLET-POC-2026-05-13.md  AGENT-FRAMEWORK-MCP-X402-ONBOARDING-2026-05-08.md  AGENT-MARKETPLACE-DISCLOSURE-GUIDELINES.md  AGENTIC-MARKETPLACE-BDD-ITERATIVE-PLAN-2026-05-05.md  BDD-BUILD-CHECKPOINTS-v3.md  BDD-COMPREHENSIVE-REVIEW-AND-GAP-PLAN-2026-04-19-v2.md  BDD-COMPREHENSIVE-REVIEW-AND-GAP-PLAN-2026-04-22-source-adapters.md  BDD-COVERAGE-REVIEW-2026-04-19.md  BDD-GAP-CLOSURE-EXECUTION-PLAN-2026-04-19.md  BDD-GAP-CLOSURE-SNAPSHOT-2026-04-19.md  BDD-ITERATION-LOG-2026-04-19.md  BDD-ITERATION-LOG-2026-04-22-source-adapters.md  BDD-SCENARIO-ID-MAP.md  BOUNTY-GAP-CLOSURE-PLAN-2026-05-08.md  CAPABILITY-HASH-LINKAGE.md  CIRCLE-X402-SOURCE-ADAPTER-SPEC-2026-05-13.md  CLAUDE-CODE-MCP-X402-HANDOFF-2026-05-09.md  CLAUDE-CODE-MCP-X402-LIVE-INVOKE-SPEC-2026-05-09.md  CLAUDE-CODE-MCP-X402-PEEKABOO-DEMO-PLAN-2026-05-09.md  CLAUDE-CODE-MCP-X402-PR-BODY-2026-05-09.md  CLAUDE-CODE-MCP-X402-PR-READINESS-2026-05-09.md  CLAUDE-CODE-MCP-X402-RECORDING-RUNBOOK-2026-05-09.md  CLOUDFLARE-TUNNEL-RCA-2026-04-24.md  COLOSSEUM-FINAL-QUASAR-PROOF-MAP-2026-05-06.md  CONSUMER-ORCHESTRATOR-PLUMBING-PLAN.md  DEMO-SCENE-SCRIPTS-FEATURES.md  DEVNET-AGENT-CLEANUP-RUNBOOK.md  DIRTY-WORKTREE-AUDIT-ACTION-PLAN-2026-04-27.md  DOGFOOD-DEMO-RECORD-RUNBOOK.md  DOGFOOD-PING-PONG-ATTESTATION-FLOW.md  ECONOMIC-DEMO-BDD-ITERATIVE-ROADMAP-2026-05-04.md  ECONOMIC-DEMO-BDD-SUBMISSION-ITERATIVE-PLAN-2026-05-05.md  ECONOMIC-DEMO-JUDGE-PACKET-2026-05-05.md  ECONOMIC-DEMO-LIVE-STORYTELLING-PLAN-2026-05-08.md  ECONOMIC-DEMO-OPERATOR-CHECKLIST-2026-05-05.md  ECONOMIC-DEMO-PROOF-HIERARCHY-2026-05-07.md  ECONOMIC-DEMO-UPFRONT-PAYMENT-JUPITER-BDD-PLAN-2026-05-07.md  END-USER-ECONOMIC-DEMO-DELIVERY-PLAN-2026-05-04.md  END-USER-ECONOMIC-DEMO-ITERATION-LOG-2026-05-04.md  FINAL-RECORDING-REHEARSAL-RUNBOOK-2026-05-06.md  (+71 more)
e2e/: agents.spec.ts  demo.spec.ts  dogfood.spec.ts  economic-demo.spec.ts  home.spec.ts  integration.spec.ts  judge-replication-onboarding.spec.ts  leaderboard.spec.ts  marketplace-conversion.spec.ts  marketplace-recording.spec.ts  navigation.spec.ts  onboarding.spec.ts  planner.spec.ts  register-local-sim.spec.ts  register-local-success.spec.ts  register.spec.ts  runs.spec.ts  setup.spec.ts  wallet-mock.spec.ts
experiments/quasar-attestation/: Cargo.toml
experiments/quasar-attestation/src/: lib.rs  state.rs  tests.rs
experiments/quasar-attestation/src/instructions/: attest.rs  confirm.rs  dispute.rs  mod.rs  register.rs
experiments/quasar-escrow/: Cargo.toml
experiments/quasar-escrow/src/: events.rs  lib.rs  state.rs  tests.rs
experiments/quasar-escrow/src/instructions/: cancel.rs  lock.rs  mod.rs  release.rs
experiments/quasar-registry/: Cargo.toml
experiments/quasar-registry/src/: events.rs  lib.rs  state.rs  tests.rs
experiments/quasar-registry/src/instructions/: deregister.rs  mod.rs  register.rs  update.rs
experiments/quasar-reputation/: Cargo.toml
experiments/quasar-reputation/src/: lib.rs  state.rs  tests.rs
experiments/quasar-reputation/src/instructions/: commit.rs  expire.rs  mod.rs  register.rs  reveal.rs
lib/: agents.ts  jupiter-client.ts  program.ts  useOnchainAgents.ts  walrus.ts
scripts/: bdd-sweep-latest-status.sh  capture-testing-specialist-demo.mjs  capture-tour.mjs  capture-tx-proof-v2.mjs  capture-tx-proof.mjs  check-bdd-feature-index.sh  check-devnet-agent-pdas.ts  check-economic-demo-live-payment-gate.mjs  check-economic-demo-submission-prep.mjs  check-final-recording-submission.mjs  check-pay-sh-provider-spec.mjs  check-pay-skills-registry.mjs  check-product-naming.mjs  check-quasar-critical-success.mjs  check-quasar-demo-readiness.mjs  check-quasar-deployment-inventory.mjs  check-quasar-per-abi.mjs  check-quasar-runtime-compatibility.mjs  check-rap-naming.mjs  check-submission-claim-boundaries.mjs  check-umbra-adapter-imports.mjs  check-umbra-sdk-imports.mjs  evaluate-cloudflare-rca.mjs  generate-economic-demo-evidence-pack.mjs  generate-economic-demo-picture-storyboard.mjs  generate-economic-demo-research-dry-run.mjs  generate-economic-demo-run-report.mjs  generate-economic-demo-submission-prep.mjs  generate-economic-demo-upfront-payment-evidence.mjs  generate-magicblock-cpi-layout-fixture.mjs  generate-pay-sh-reddi-x402-evidence.mjs  generate-rap-mcp-bridge-surfpool-proof.mjs  generate-torque-reputation-ranking-evidence.mjs  generate-umbra-private-x402-evidence.mjs  ingest-circle-x402-discovery.mjs  ingest-pay-sh-catalog.mjs  inspect-pay-sh-mcp.mjs  judge-replication-check.mjs  plan-economic-demo-devnet-usdc-sender.mjs  record-onboarding-overview-playwright.mjs  (+41 more)
(+600 files in other folders)
