[package]
name = "quasar-escrow-poc"
version = "0.1.0"
edition = "2021"
description = "Quasar SOL-native escrow POC — parity port of programs/escrow hot path"

[lib]
crate-type = ["cdylib", "lib"]
name = "quasar_escrow_poc"

[features]
default = []
alloc = []
debug = []

[dependencies]
quasar-lang = { path = "../../third_party/quasar/lang" }
solana-address = { version = "2.2.0" }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
solana-keypair = { version = "3.0.1" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[workspace]
