[package]
name = "quasar-reputation"
version = "0.1.0"
edition = "2021"
description = "Quasar SOL-native blind commit-reveal reputation — parity port of programs/escrow reputation handlers (commit_rating/reveal_rating/expire_rating)"

[lib]
crate-type = ["cdylib", "lib"]
name = "quasar_reputation"

[features]
default = []
alloc = []
debug = []

[dependencies]
quasar-lang = { path = "../../third_party/quasar/lang" }
solana-address = { version = "2.2.0" }
solana-instruction = { version = "3.2.0" }
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }

[dev-dependencies]
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
solana-keypair = { version = "3.0.1" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[workspace]
